Changes for java 8 target compatibility