@@ -20,10 +20,12 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
+import com.google.common.collect.ImmutableSet;
 import java.io.File;
 import java.io.FilenameFilter;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
@@ -455,13 +457,13 @@ public class MetricsDBTests {
   @Test
   public void testListOnDiskFiles_empty() throws Exception {
     deleteAll();
-    assertEquals(Set.of(), MetricsDB.listOnDiskFiles());
+    assertEquals(Collections.EMPTY_SET, MetricsDB.listOnDiskFiles());
   }
 
   @Test
   public void testListOnDiskFiles_one() throws Exception {
     deleteAll();
-    Set<Long> expected = Set.of(1000000000L);
+    Set<Long> expected = ImmutableSet.of(1000000000L);
     for (Long ts : expected) {
       (new MetricsDB(ts)).remove();
     }
@@ -471,7 +473,7 @@ public class MetricsDBTests {
   @Test
   public void testListOnDiskFiles_two() throws Exception {
     deleteAll();
-    Set<Long> expected = Set.of(1000000000L, 500L);
+    Set<Long> expected = ImmutableSet.of(1000000000L, 500L);
     for (Long ts : expected) {
       (new MetricsDB(ts)).remove();
     }
@@ -481,7 +483,7 @@ public class MetricsDBTests {
   @Test
   public void testListOnDiskFiles_many() throws Exception {
     deleteAll();
-    Set<Long> expected = Set.of(1000000000L, 500L, 0L);
+    Set<Long> expected = ImmutableSet.of(1000000000L, 500L, 0L);
     for (Long ts : expected) {
       (new MetricsDB(ts)).remove();
     }
